--- a/main.css
+++ b/main.css
@@ -9,7 +9,7 @@ body{
 
 header {
   max-width: 1440px;
-  background-image: url(images/background-img.png);
+  background-image: url(images/image_background.png);
   background-repeat: no-repeat;
   background-size: cover;
   
