--- a/main.css
+++ b/main.css
@@ -9,7 +9,8 @@ body{
 
 header {
   max-width: 1440px;
-  background-image: url(images/homepage-img.jpg);
+  background-image: url(images/homepage-img-2.jpg);
+  
   background-repeat: no-repeat;
   background-size: cover;
   
@@ -50,7 +51,7 @@ header {
 .header_button {
   max-width: 360px;
   padding: 10px;
-  background-color: #4A90E2;
+  background-color: #97ade7;
   border: 3px solid white;
   color: white;
   border-radius: 5px;
@@ -137,6 +138,7 @@ h4{
   font-size: 16px;
   text-transform: uppercase;
   font-weight: 600;
+  color: white;
 
 }
 
